--- a/Project.Web/Views/Reports/ReportHome.cshtml
+++ b/Project.Web/Views/Reports/ReportHome.cshtml
@@ -13,7 +13,7 @@
         $(".date-control").daterangepicker({
             singleDatePicker: true,
             locale: {
-                format: 'DD/MM/YYYY'
+                format: 'MM/DD/YY'
             },
         });
     });
