--- a/Project.Web/Views/AdminSeting/LeadSourceHome.cshtml
+++ b/Project.Web/Views/AdminSeting/LeadSourceHome.cshtml
@@ -20,7 +20,7 @@
                                                 <td class="text-center"><span class="label label-success">@src.Status</span></td>
                                                 <td class="text-center">
                                                     @*<button type="button" data-toggle="modal" data-target=".bs-example-modal-animation" class="btn btn-raised btn-primary">Launch modal</button>*@
-                                                    <button type="button" class="btn btn-outline btn-primary" onclick="SetModalData('@src.SourceName','@src.LeadSourceID');" title="Edit Lead Source"><i class="ti-pencil"></i></button>
+                                                    <button type="button" class="btn btn-outline btn-primary" onclick="SetSourceModalData('@src.SourceName','@src.LeadSourceID');" title="Edit Lead Source"><i class="ti-pencil"></i></button>
                                                     @*<button type="button" class="btn btn-outline btn-success" data-toggle="modal" data-target=".bs-example-modal-animation" title="Change Status"><i class="ti-sta"></i></button>*@
                                                     <button type="button" class="btn btn-outline btn-danger" onclick="DeleteSource('@src.LeadSourceID');" title="Delete Lead Source"><i class="ti-trash"></i></button>
                                                 </td>
